//
// This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v2.2.7 
// See <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> 
// Any modifications to this file will be lost upon recompilation of the source schema. 
// Generated on: 2020.04.24 at 01:19:55 PM CEST 
//


package nikita.common.rep;

import javax.xml.bind.annotation.XmlAccessType;
import javax.xml.bind.annotation.XmlAccessorType;
import javax.xml.bind.annotation.XmlElement;
import javax.xml.bind.annotation.XmlType;


/**
 * <p>Java class for Klasse complex type.
 *
 * <p>The following schema fragment specifies the expected content contained within this class.
 *
 * <pre>
 * &lt;complexType name="Klasse">
 *   &lt;complexContent>
 *     &lt;restriction base="{http://www.w3.org/2001/XMLSchema}anyType">
 *       &lt;sequence>
 *         &lt;element name="rekkefoelge" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
 *         &lt;element name="klassifikasjonssystem" type="{http://rep.geointegrasjon.no/Arkiv/Kjerne/xml.schema/2012.01.31}Klassifikasjonssystem"/>
 *         &lt;element name="klasseID" type="{http://www.w3.org/2001/XMLSchema}string"/>
 *         &lt;element name="skjermetKlasse" type="{http://www.w3.org/2001/XMLSchema}boolean" minOccurs="0"/>
 *         &lt;element name="ledetekst" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
 *         &lt;element name="tittel" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
 *       &lt;/sequence>
 *     &lt;/restriction>
 *   &lt;/complexContent>
 * &lt;/complexType>
 * </pre>
 */
@XmlAccessorType(XmlAccessType.FIELD)
@XmlType(name = "Klasse", namespace = "http://rep.geointegrasjon.no/Arkiv/Kjerne/xml.schema/2012.01.31", propOrder = {
        "rekkefoelge",
        "klassifikasjonssystem",
        "klasseID",
        "skjermetKlasse",
        "ledetekst",
        "tittel"
})
public class Klasse {

    protected String rekkefoelge;
    @XmlElement(required = true)
    protected Klassifikasjonssystem klassifikasjonssystem;
    @XmlElement(required = true)
    protected String klasseID;
    protected Boolean skjermetKlasse;
    protected String ledetekst;
    protected String tittel;

    /**
     * Gets the value of the rekkefoelge property.
     *
     * @return possible object is
     * {@link String }
     */
    public String getRekkefoelge() {
        return rekkefoelge;
    }

    /**
     * Sets the value of the rekkefoelge property.
     *
     * @param value allowed object is
     *              {@link String }
     */
    public void setRekkefoelge(String value) {
        this.rekkefoelge = value;
    }

    /**
     * Gets the value of the klassifikasjonssystem property.
     *
     * @return possible object is
     * {@link Klassifikasjonssystem }
     */
    public Klassifikasjonssystem getKlassifikasjonssystem() {
        return klassifikasjonssystem;
    }

    /**
     * Sets the value of the klassifikasjonssystem property.
     *
     * @param value allowed object is
     *              {@link Klassifikasjonssystem }
     */
    public void setKlassifikasjonssystem(Klassifikasjonssystem value) {
        this.klassifikasjonssystem = value;
    }

    /**
     * Gets the value of the klasseID property.
     *
     * @return possible object is
     * {@link String }
     */
    public String getKlasseID() {
        return klasseID;
    }

    /**
     * Sets the value of the klasseID property.
     *
     * @param value allowed object is
     *              {@link String }
     */
    public void setKlasseID(String value) {
        this.klasseID = value;
    }

    /**
     * Gets the value of the skjermetKlasse property.
     *
     * @return possible object is
     * {@link Boolean }
     */
    public Boolean isSkjermetKlasse() {
        return skjermetKlasse;
    }

    /**
     * Sets the value of the skjermetKlasse property.
     *
     * @param value allowed object is
     *              {@link Boolean }
     */
    public void setSkjermetKlasse(Boolean value) {
        this.skjermetKlasse = value;
    }

    /**
     * Gets the value of the ledetekst property.
     *
     * @return possible object is
     * {@link String }
     */
    public String getLedetekst() {
        return ledetekst;
    }

    /**
     * Sets the value of the ledetekst property.
     *
     * @param value allowed object is
     *              {@link String }
     */
    public void setLedetekst(String value) {
        this.ledetekst = value;
    }

    /**
     * Gets the value of the tittel property.
     *
     * @return possible object is
     * {@link String }
     */
    public String getTittel() {
        return tittel;
    }

    /**
     * Sets the value of the tittel property.
     *
     * @param value allowed object is
     *              {@link String }
     */
    public void setTittel(String value) {
        this.tittel = value;
    }

}
